[gd_scene load_steps=8 format=2]

[ext_resource path="res://JPPP_Theme.tres" type="Theme" id=1]
[ext_resource path="res://pictures/flag.png" type="Texture" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=5]

[sub_resource type="GDScript" id=3]
script/source = "extends Control

func screen_just_entered() -> void:
	
	get_parent().screen_just_entered()
	pass
"

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0734824, 0.638978, 0.990415, 1 )
colors = PoolColorArray( 0.0161016, 0.546246, 0.664844, 1, 0.117466, 0.251855, 0.379688, 1, 0.0632939, 0.0898689, 0.28096, 1, 0.0445917, 0.0339453, 0.246875, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 64

[node name="Main" type="Control" groups=["MAIN"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Screen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1360.0
margin_right = -1360.0
script = SubResource( 3 )

[node name="Background" type="TextureRect" parent="Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 35.0
margin_right = -32.0
margin_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = false
follow_focus = true
scroll_horizontal_enabled = false

[node name="GameContainer" type="GridContainer" parent="Screen/ScrollContainer"]
custom_constants/vseparation = 102
custom_constants/hseparation = 215
columns = 4

[node name="bt_upall" type="Button" parent="Screen"]
margin_left = 1152.0
margin_top = 660.0
margin_right = 1257.0
margin_bottom = 701.0
theme = ExtResource( 1 )
text = "Update All"

[node name="bt_lang" type="Button" parent="Screen"]
margin_left = 1196.0
margin_top = 26.0
margin_right = 1251.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
shortcut_in_tooltip = false
icon = ExtResource( 2 )
expand_icon = true

[node name="Console" type="TextEdit" parent="Screen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 26.0
margin_right = -18.0
margin_bottom = -22.0
readonly = true
highlight_current_line = true
syntax_highlighting = true
draw_tabs = true
breakpoint_gutter = true
override_selected_font_color = true
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
smooth_scrolling = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 5 )]

[node name="MessageContainer" type="ScrollContainer" parent="." groups=["MC"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 508.0
margin_right = -35.0
margin_bottom = -20.0
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MessageContainer"]
margin_right = 1210.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[connection signal="pressed" from="Screen/bt_upall" to="." method="_on_bt_upall_pressed"]
[connection signal="pressed" from="Screen/bt_lang" to="." method="_on_bt_lang_pressed"]

[editable path="Settings"]
